Playing with UI and display elements Also may have deleted some comments from JS files

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 							<legend>Timing</legend>
 							<div>
 								<label for="input-desired-length-seconds">Desired length (estimate, seconds)</label>
-								<input id="input-desired-length-seconds" inputmode="numeric" required value="30">
+								<input id="input-desired-length-seconds" inputmode="numeric" required type="number" value="30">
 							</div>
 							<div>
 								<label for="input-min-delay-seconds">Min Delay Between Sounds (seconds)</label>
-								<input id="input-min-delay-seconds" inputmode="decimal" required step="0.1" value="0.5">
+								<input id="input-min-delay-seconds" inputmode="decimal" required step="0.1" type="number" value="0.5">
 							</div>
 							<div>
 								<label for="input-max-delay-seconds">Max Delay Between Sounds (seconds)</label>
-								<input id="input-max-delay-seconds" inputmode="decimal" required step="0.1" value="1">
+								<input id="input-max-delay-seconds" inputmode="decimal" required step="0.1" type="number" value="1">
 							</div>
 						</fieldset>
 						<div>
